--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       <nav>
         <img src="http://placehold.it/2001x70/000">
         <ul>
-          <li></li>
+          <li>blahblahblah</li>
           <li></li>
           <li>
           </li>
