--- a/index.html
+++ b/index.html
@@ -1,41 +1,45 @@
 <!DOCTYPE html>
 <html land="en">
-  <head>
+
+<head>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="'stylesheet" href="css/style.css">
     <title>Wireframe Exersise</title>
-  </head>
-  <body>
+</head>
+
+<body>
     <header>
-      <nav>
-        <img src="http://placehold.it/2001x70/000">
-        <ul>
-          <li>blahblahblah</li>
-          <li></li>
-          <li>
-          </li>
-        </ul>
-      </nav>
+        <nav>
+            <img src="http://placehold.it/2001x70/000">
+            <ul>
+                <li><a href="#">Nav item 1</a></li>
+                <li><a href="#">Nav item 2</a></li>
+                <li><a href="#">Nav item 3</a></li>
+            </ul>
+        </nav>
     </header>
-
     <main>
-      <img src="http://placehold.it/960x450/000">
+        <img src="http://placehold.it/960x450/000">
 
-      <ul>
-        <li><img src="" alt=""></li>
-        <li><img src="" alt=""></li>
-        <li><img src="" alt=""></li>
-      </ul>
+        <ul>
+            <li><img src="http://placehold.it/300x375/000" alt=""></li>
+            <li><img src="http://placehold.it/300x375/000" alt=""></li>
+            <li><img src="http://placehold.it/300x375/000" alt=""></li>
+        </ul>
 
-      <section>
-        <img src="http://placehold.it/480x400" alt="">
-        <div>
-          <h2>Featured Section Heading</h2>
-          <p></p>
-          <div>call to action</div>
-        </div>
-      </section>
+        <section>
+            <img src="http://placehold.it/480x400" alt="">
+            <div>
+                <h2>Featured Section Heading</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam nam consectetur eos, vero quo harum maiores officiis voluptatum repellat cum ea aspernatur laboriosam perferendis ex exercitationem ipsum sequi fugiat neque. Temporibus aspernatur
+                    soluta molestiae esse consectetur a dolorem eaque. Veritatis qui saepe numquam quidem quibusdam, placeat distinctio optio corporis? Soluta doloremque quam, delectus dolorem voluptatum quod iure fugit ea voluptatibus! Ullam omnis illo,
+                    odio placeat quibusdam iusto necessitatibus, iure voluptas ipsam quia vero id? Ipsa dicta id beatae, amet adipisci dolor officia unde earum nobis sunt, excepturi aspernatur ad doloribus! Exercitationem culpa repellendus minima provident
+                    quos recusandae asperiores, porro eligendi eos adipisci odio temporibus doloremque sit nemo, eum facere unde inventore optio tempore pariatur! Tempora doloremque quibusdam rem ex assumenda!</p>
+                <div>call to Action</div>
+            </div>
+        </section>
     </main>
     <footer></footer>
-  </body>
+</body>
+
 </html>
